most of the things updated

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -228,8 +228,11 @@
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span></p>
+ <div class="container copyright text-center mt-4 d-flex flex-lg-row justify-content-between">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span>
+      </p>
+      <p><a href="terms.html">Terms & Condtion</a></p>
+      <p><a href="privacy-policy.html">Privacy Policy</a></p>
       <div class="credits">
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
