--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -85,8 +85,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-10">
             <div class="policy-content">
-              <h2 class="section-title" data-aos="fade-up">Privacy Policy</h2>
-              <p class="last-updated" data-aos="fade-up" data-aos-delay="100">Last Updated: June 17, 2025</p>
+
 
               <p data-aos="fade-up" data-aos-delay="200">At Digital Transformation Company Pakistan (DTCPak), we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your personal information when you visit our website, use our services, or interact with us. By using our services, you agree to the practices described in this policy.</p>
 
@@ -141,13 +140,14 @@
 
               <h3 data-aos="fade-up" data-aos-delay="2400">9. Contact Us</h3>
               <p data-aos="fade-up" data-aos-delay="2500">If you have questions about this Privacy Policy, please contact us:</p>
-              <ul data-aos="fade-up" data-aos-delay="2600">
+              <ul data-aos="fade-up" data-aos-delay="3100">
                 <li><strong>Company:</strong> Digital Transformation Company Pakistan</li>
-                <li><strong>Address:</strong> A108 Adam Street, New York, NY 535022, United States</li>
-                <li><strong>Email:</strong> <a href="mailto:info@example.com">info@example.com</a></li>
-                <li><strong>Phone:</strong> <a href="tel:+155895548855">+1 5589 55488 55</a></li>
+                <p>Innovista, Defence Central Library, Sunset Boulevard, Phase 2 Extension Road,Karachi </p>
+                <p class="mt-4"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
+                <p><strong>Email:</strong> <span><a
+                      href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
               </ul>
-              <p data-aos="fade-up" data-aos-delay="2700">You can also reach us through our <a href="contact-us.html">Contact Us</a> page.</p>
+              <p data-aos="fade-up" data-aos-delay="2700">You can also reach us through our <a href="contact.html">Contact Us</a> page.</p>
             </div>
           </div>
         </div>
@@ -207,8 +207,11 @@
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span></p>
+ <div class="container copyright text-center mt-4 d-flex flex-lg-row justify-content-between">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span>
+      </p>
+      <p><a href="terms.html">Terms & Condtion</a></p>
+      <p><a href="privacy-policy.html">Privacy Policy</a></p>
       <div class="credits">
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
