--- a/terms.html
+++ b/terms.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Terms and Conditions</title>
-  <meta name="description" content="Review the Terms and Conditions for using services provided by Digital Transformation Company Pakistan.">
-  <meta name="keywords" content="terms and conditions, digital transformation company pakistan, software house, service agreement">
+  <meta name="description"
+    content="Review the Terms and Conditions for using services provided by Digital Transformation Company Pakistan.">
+  <meta name="keywords"
+    content="terms and conditions, digital transformation company pakistan, software house, service agreement">
 
   <!-- Favicons -->
   <link href="assets/img/dtcpak logo.png" rel="icon">
@@ -15,7 +17,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,13 +42,15 @@
 
 <body class="terms-and-conditions-page">
 
-    <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div
+      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 70px; width: auto;">      </a>
+        <img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid"
+          style="max-height: 70px; width: auto;"> </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -85,13 +91,18 @@
         <div class="row justify-content-center">
           <div class="col-lg-10">
             <div class="terms-content">
-              <h2 class="section-title" data-aos="fade-up">Terms and Conditions</h2>
-              <p class="last-updated" data-aos="fade-up" data-aos-delay="100">Last Updated: June 17, 2025</p>
 
-              <p data-aos="fade-up" data-aos-delay="200">Welcome to Digital Transformation Company Pakistan (DTCPak). These Terms and Conditions govern your use of our website, services, and any related products offered by DTCPak, including web development, digital marketing, graphic designing, and SEO services. By accessing or using our services, you agree to be bound by these terms. If you do not agree, please refrain from using our services.</p>
+
+              <p data-aos="fade-up" data-aos-delay="200">Welcome to Digital Transformation Company Pakistan (DTCPak).
+                These Terms and Conditions govern your use of our website, services, and any related products offered by
+                DTCPak, including web development, digital marketing, graphic designing, and SEO services. By accessing
+                or using our services, you agree to be bound by these terms. If you do not agree, please refrain from
+                using our services.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="300">1. Acceptance of Terms</h3>
-              <p data-aos="fade-up" data-aos-delay="400">By engaging with DTCPak’s website or services, you confirm that you are at least 18 years old and have the legal capacity to enter into this agreement. These terms may be updated periodically, and continued use constitutes acceptance of any changes.</p>
+              <p data-aos="fade-up" data-aos-delay="400">By engaging with DTCPak’s website or services, you confirm that
+                you are at least 18 years old and have the legal capacity to enter into this agreement. These terms may
+                be updated periodically, and continued use constitutes acceptance of any changes.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="500">2. Services Provided</h3>
               <p data-aos="fade-up" data-aos-delay="600">DTCPak offers services including but not limited to:</p>
@@ -101,7 +112,8 @@
                 <li>Graphic Designing (e.g., branding, marketing collateral)</li>
                 <li>SEO Services (e.g., on-page optimization, local SEO)</li>
               </ul>
-              <p data-aos="fade-up" data-aos-delay="800">Service details, scope, and deliverables will be outlined in separate agreements or proposals provided to clients.</p>
+              <p data-aos="fade-up" data-aos-delay="800">Service details, scope, and deliverables will be outlined in
+                separate agreements or proposals provided to clients.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="900">3. Client Responsibilities</h3>
               <p data-aos="fade-up" data-aos-delay="1000">Clients agree to:</p>
@@ -122,35 +134,54 @@
               </ul>
 
               <h3 data-aos="fade-up" data-aos-delay="1500">5. Intellectual Property</h3>
-              <p data-aos="fade-up" data-aos-delay="1600">All intellectual property created by DTCPak during a project (e.g., code, designs, content) remains the property of DTCPak until full payment is received. Upon payment, ownership or usage rights will be transferred as per the project agreement. Clients may not reproduce, modify, or distribute DTCPak’s work without permission.</p>
+              <p data-aos="fade-up" data-aos-delay="1600">All intellectual property created by DTCPak during a project
+                (e.g., code, designs, content) remains the property of DTCPak until full payment is received. Upon
+                payment, ownership or usage rights will be transferred as per the project agreement. Clients may not
+                reproduce, modify, or distribute DTCPak’s work without permission.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="1700">6. Confidentiality</h3>
-              <p data-aos="fade-up" data-aos-delay="1800">DTCPak and clients agree to keep confidential any proprietary or sensitive information shared during the course of a project, except as required by law or with mutual consent.</p>
+              <p data-aos="fade-up" data-aos-delay="1800">DTCPak and clients agree to keep confidential any proprietary
+                or sensitive information shared during the course of a project, except as required by law or with mutual
+                consent.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="1900">7. Termination of Services</h3>
-              <p data-aos="fade-up" data-aos-delay="2000">Either party may terminate a service agreement by providing written notice as specified in the project contract. DTCPak reserves the right to terminate services for non-payment, breach of terms, or other reasonable cause. Upon termination, clients remain liable for any outstanding fees.</p>
+              <p data-aos="fade-up" data-aos-delay="2000">Either party may terminate a service agreement by providing
+                written notice as specified in the project contract. DTCPak reserves the right to terminate services for
+                non-payment, breach of terms, or other reasonable cause. Upon termination, clients remain liable for any
+                outstanding fees.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="2100">8. Limitation of Liability</h3>
-              <p data-aos="fade-up" data-aos-delay="2200">DTCPak will not be liable for any indirect, incidental, or consequential damages arising from the use of our services, including loss of profits, data, or business opportunities. Our total liability is limited to the amount paid by the client for the specific service.</p>
+              <p data-aos="fade-up" data-aos-delay="2200">DTCPak will not be liable for any indirect, incidental, or
+                consequential damages arising from the use of our services, including loss of profits, data, or business
+                opportunities. Our total liability is limited to the amount paid by the client for the specific service.
+              </p>
 
               <h3 data-aos="fade-up" data-aos-delay="2300">9. Indemnification</h3>
-              <p data-aos="fade-up" data-aos-delay="2400">Clients agree to indemnify and hold DTCPak harmless from any claims, damages, or losses arising from their use of our services, provided content, or violation of these terms.</p>
+              <p data-aos="fade-up" data-aos-delay="2400">Clients agree to indemnify and hold DTCPak harmless from any
+                claims, damages, or losses arising from their use of our services, provided content, or violation of
+                these terms.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="2500">10. Governing Law</h3>
-              <p data-aos="fade-up" data-aos-delay="2600">These Terms and Conditions are governed by the laws of the State of New York, United States. Any disputes will be resolved in the courts of New York, NY.</p>
+              <p data-aos="fade-up" data-aos-delay="2600">These Terms and Conditions are governed by the laws of the
+                State of New York, United States. Any disputes will be resolved in the courts of New York, NY.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="2700">11. Changes to Terms</h3>
-              <p data-aos="fade-up" data-aos-delay="2800">DTCPak may update these Terms and Conditions periodically. Changes will be posted on this page with an updated "Last Updated" date. Continued use of our services constitutes acceptance of the revised terms.</p>
+              <p data-aos="fade-up" data-aos-delay="2800">DTCPak may update these Terms and Conditions periodically.
+                Changes will be posted on this page with an updated "Last Updated" date. Continued use of our services
+                constitutes acceptance of the revised terms.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="2900">12. Contact Us</h3>
-              <p data-aos="fade-up" data-aos-delay="3000">If you have questions about these Terms and Conditions, please contact us:</p>
+              <p data-aos="fade-up" data-aos-delay="3000">If you have questions about these Terms and Conditions, please
+                contact us:</p>
               <ul data-aos="fade-up" data-aos-delay="3100">
                 <li><strong>Company:</strong> Digital Transformation Company Pakistan</li>
-                <li><strong>Address:</strong> A108 Adam Street, New York, NY 535022, United States</li>
-                <li><strong>Email:</strong> <a href="mailto:info@example.com">info@example.com</a></li>
-                <li><strong>Phone:</strong> <a href="tel:+155895548855">+1 5589 55488 55</a></li>
+                <p>Innovista, Defence Central Library, Sunset Boulevard, Phase 2 Extension Road,Karachi </p>
+                <p class="mt-4"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
+                <p><strong>Email:</strong> <span><a
+                      href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
               </ul>
-              <p data-aos="fade-up" data-aos-delay="3200">You can also reach us through our <a href="contact-us.html">Contact Us</a> page.</p>
+              <p data-aos="fade-up" data-aos-delay="3200">You can also reach us through our <a
+                  href="contact.html">Contact Us</a> page.</p>
             </div>
           </div>
         </div>
@@ -165,10 +196,12 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 100px; width: auto;">      </a>
+            <img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid"
+              style="max-height: 100px; width: auto;"> </a>
 
           </a>
-          <p>We are a leading software house specializing in digital marketing, web development, graphic designing, and SEO services to help businesses succeed in the digital world.</p>
+          <p>We are a leading software house specializing in digital marketing, web development, graphic designing, and
+            SEO services to help businesses succeed in the digital world.</p>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -200,18 +233,22 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>Innovista, Defence Central  Library</p>
+          <p>Innovista, Defence Central Library</p>
           <p>Sunset Boulevard, Phase 2 Extension Road</p>
           <p>Karachi</p>
-        <p class="mt-4"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
-          <p><strong>Email:</strong> <span><a href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
+          <p class="mt-4"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
+          <p><strong>Email:</strong> <span><a
+                href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
         </div>
 
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span></p>
+ <div class="container copyright text-center mt-4 d-flex flex-lg-row justify-content-between">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span>
+      </p>
+      <p><a href="terms.html">Terms & Condtion</a></p>
+      <p><a href="privacy-policy.html">Privacy Policy</a></p>
       <div class="credits">
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
@@ -221,13 +258,14 @@
 
 
   <!-- Floating Contact Buttons -->
-   <div class="floating-contact-buttons">
+  <div class="floating-contact-buttons">
     <a href="https://wa.me/92 303 2590468" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
     <a href="tel:+92 303 2590468" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
   </div>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
