--- a/get-started.html
+++ b/get-started.html
@@ -15,7 +15,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,12 +41,14 @@
 <body class="get-started-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div
+      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 70px; width: auto;">      </a>
+        <img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid"
+          style="max-height: 70px; width: auto;"> </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -103,7 +107,8 @@
                   <input type="text" class="form-control" name="subject" placeholder="Subject" required>
                 </div>
                 <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Tell us about your project" required></textarea>
+                  <textarea class="form-control" name="message" rows="6" placeholder="Tell us about your project"
+                    required></textarea>
                 </div>
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
@@ -121,16 +126,18 @@
 
   </main>
 
- <footer id="footer" class="footer">
+  <footer id="footer" class="footer">
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 100px; width: auto;">      </a>
+            <img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid"
+              style="max-height: 100px; width: auto;"> </a>
 
           </a>
-          <p>We are a leading software house specializing in digital marketing, web development, graphic designing, and SEO services to help businesses succeed in the digital world.</p>
+          <p>We are a leading software house specializing in digital marketing, web development, graphic designing, and
+            SEO services to help businesses succeed in the digital world.</p>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -141,7 +148,7 @@
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
-       <ul>
+          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="service-details.html">Services</a></li>
@@ -160,20 +167,23 @@
           </ul>
         </div>
 
-        <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-          <h4>Contact Us</h4>
-          <p>Innovista, Defence Central  Library</p>
-          <p>Sunset Boulevard, Phase 2 Extension Road</p>
-          <p>Karachi</p>
-        <p class="mt-4"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
-          <p><strong>Email:</strong> <span><a href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
+ <div class="container copyright text-center mt-4 d-flex flex-lg-row justify-content-between">
+          <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights
+              Reserved</span>
+          </p>
+          <p><a href="terms.html">Terms & Condtion</a></p>
+          <p><a href="privacy-policy.html">Privacy Policy</a></p>
+          <div class="credits">
+            <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+          </div>
         </div>
 
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span>
+      </p>
       <div class="credits">
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
@@ -183,13 +193,14 @@
 
 
   <!-- Floating Contact Buttons -->
-   <div class="floating-contact-buttons">
+  <div class="floating-contact-buttons">
     <a href="https://wa.me/92 303 2590468" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
     <a href="tel:+92 303 2590468" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
   </div>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
